[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.1.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
hyper = "1.2.0"
warp = "0.3.0"
lazy_static = "1.4.0"
cached = {version = "0.51.3", features = ["async"]}